Removing google.longrunning.Operations from speech

--- a/google/cloud/speech/cloud_speech.yaml
+++ b/google/cloud/speech/cloud_speech.yaml
@@ -12,7 +12,8 @@ documentation:
 
 apis:
 - name: google.cloud.speech.v1beta1.Speech
-- name: google.longrunning.Operations
+# TODO get LRO API call support added for Speech
+#- name: google.longrunning.Operations
 
 # Pass origin and project RpcServerExtensions to the backend.
 context:
